--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta property="og:title" content=" Brice Clain, designer graphique et developpeur web. ">
   <meta name="keywords"
     content="tél 819, propulsion pme, stratège web, média webdesign, siteweb ca, production vidéo, aujourd hui, médias sociaux, génération web, imprimerie trois, web impression, asp net, trois rivieres, rocky giroux, stylla web, syn média, david magny, commerce électronique, nouveau site, média fou, web pour inspecteur, trois rivières yannick, armoires de cuisine, festivoix de trois, réseau agences intégrées, agences intégrées 360, tourisme trois rivières, diocèse de trois, 2018 par pagup, pagup agence seo, trois rivière ottawa, conception plan évacuation, plan évacuation trois, évacuation trois rivières, qualifiées vous contacteront, madison solutions web, université du québec, formulaire et agences, agences web qualifiées, hétu solutions évolutives, idée création web, salamandre conception infographique, créations web trois, petites et moyennes, basée trois rivières, clés en main, refonte de site, offrant des services, conception, création, internet, québec, mauricie, marketing, services, commerce, référencement, entreprises, pme, spécialisée, concepteur, numérique, montréal, sherbrooke, service, hébergement, gestion, située, offre, studio, réseau, communication, affaires, wordpress, ville, équipe, local, prix, rue, imprimerie, stratégie, siteexact, offrir, publicité, recherche, petites, boutique, entreprise, vidéo, collège, laflèche, consultant, victoriaville, plan, stratégies, officiel, université, rocky, giroux, experts, facebook    ">
-  <title>Brice, Développeur web et designer ux/ui</title>
-	<link rel="canonical" href="https://briceclain.com" />
+  <title>Dr. Atul Jakhar</title>
+	<link rel="canonical" href="https://dratuljakhar.github.io" />
   <link rel="icon" type="image/png" href="en/icon.png" />
   <link rel="stylesheet" href="css/style2.min.css">
   <script src="ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -49,8 +49,8 @@
     </div>
     <div class="num">
       <h2>Contact</h2>
-      <a href="mailto: contact@briceclain.com">
-        <h3>contact@briceclain.com</h3>
+      <a href="mailto: 2019phdmt002@curaj.ac.in">
+        <h3>2019phdmt002@curaj.ac.in</h3>
       </a>
       <a href="tel: 001-819-608-8335">
         <h3>(+1) 819 609 8335</h3>
