--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <a href="mailto: 2019phdmt002@curaj.ac.in">
         <h3>2019phdmt002@curaj.ac.in</h3>
       </a>
-      <a href="tel: 001-819-608-8335">
-        <h3>(+1) 819 609 8335</h3>
+      <a href="tel: XXXXXXX458">
+        <h3>(+91) XXXX XXX 458</h3>
       </a>
     </div>
     <form id="form">
@@ -76,13 +76,13 @@
       </div>
     </form>
     <div class="reseaux">
-      <a class="rleft" href="https://www.instagram.com/brice.web/" target="_blank"><img src="img/reseaux/in.svg"
+      <a class="rleft" href="https://www.instagram.com/dratuljakhar/" target="_blank"><img src="img/reseaux/in.svg"
           alt="instagram"></a>
-      <a href="https://www.linkedin.com/in/brice-clain-853852189/" target="_blank"><img src="img/reseaux/ln.svg"
+      <a href="https://www.linkedin.com/in/dratuljakhar/" target="_blank"><img src="img/reseaux/ln.svg"
           alt="linkedin"></a>
-      <a class="rleft" href="https://www.tiktok.com/@brice.web" target="_blank"><img src="img/reseaux/tt.svg"
+      <a class="rleft" href="https://www.x.com/dratuljakhar" target="_blank"><img src="img/reseaux/tt.svg"
           alt="tiktok"></a>
-      <a href="https://www.behance.net/briceclain" target="_blank"><img src="img/reseaux/yt.svg" alt="youtube"></a>
+      <a href="https://www.researchgate.net/dratuljakhar" target="_blank"><img src="img/reseaux/yt.svg" alt="youtube"></a>
     </div>
   </div>
   <a id="boutontr">
@@ -127,13 +127,13 @@
       </a>
     </div>
     <div class="reseaux">
-      <a class="rleft" href="https://www.instagram.com/brice.web/" target="_blank"><img src="img/reseaux/in.svg"
+      <a class="rleft" href="https://www.instagram.com/dratuljakhar/" target="_blank"><img src="img/reseaux/in.svg"
           alt="instagram"></a>
-      <a href="https://www.linkedin.com/in/brice-clain-853852189/" target="_blank"><img src="img/reseaux/ln.svg"
+      <a href="https://www.linkedin.com/in/dratuljakhar/" target="_blank"><img src="img/reseaux/ln.svg"
           alt="linkedin"></a>
-      <a class="rleft" href="https://www.tiktok.com/@brice.web" target="_blank"><img src="img/reseaux/tt.svg"
+      <a class="rleft" href="https://www.x.com/dratuljakhar" target="_blank"><img src="img/reseaux/tt.svg"
           alt="tiktok"></a>
-      <a href="https://www.behance.net/briceclain" target="_blank"><img src="img/reseaux/yt.svg" alt="youtube"></a>
+      <a href="https://www.researchgate.net/dratuljakhar" target="_blank"><img src="img/reseaux/yt.svg" alt="youtube"></a>
     </div>
   </div>
   <div class="content">
@@ -151,14 +151,14 @@
           <div class="line line1">
             <p>01</p>
             <div class="textcontain">
-              <h2>Hello, I'm <span>Brice</span>!</h2>
+              <h2>Hello, I'm <span> Dr. Atul Jakhar</span>!</h2>
               <div class="hide"></div>
             </div>
           </div>
           <div class="line line2">
             <p>02</p>
             <div class="textcontain">
-              <h2>I <span>design</span> <img src="img/design.svg" alt="design"> and <span>develop</span> <img
+              <h2>I <span>am </span> <img src="img/design.svg" alt="design"> an <span>Assistant Professor</span> <img
                   src="img/laptop.svg" alt="laptop"> </h2>
               <div class="hide"></div>
             </div>
@@ -166,12 +166,12 @@
           <div class="line line3">
             <p>03</p>
             <div class="textcontain">
-              <h2>websites.</h2>
+              <h2>Mathematics</h2>
               <div class="hide"></div>
             </div>
           </div>
         </div>
-        <h4>I also design your brand image, logo...</h4>
+        <h4>at Dayanandasagar University, Banglore</h4>
         <div class="slider">
           <div class="slides">
             <div class="slide active">
