--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale = 1, maximum-scale=3.0, minimum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta property="og:url" content=" https://briceclain.com/ ">
-  <meta property="og:image" content=" https://briceclain.com/../img/profil1.png ">
+  <meta property="og:url" content=" https://dratuljakhar.github.io/ ">
+  <meta property="og:image" content="/img/profil.png ">
   <meta property="og:description"
     content="Salut, moi c'est Brice! Je design et développe des sites web. Je design aussi votre image de marque, logo... ">
   <meta property="og:title" content=" Brice Clain, designer graphique et developpeur web. ">
