--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       --bg: #f5f6fa;
       --text: #222;
       --card-bg: #fff;
-      --shadow: 0 4px 24px rgba(0,0,0,0.08);
+      --shadow: 0 8px 32px rgba(0,0,0,0.15);
     }
     body {
       margin: 0;
@@ -23,25 +23,27 @@
       background: var(--bg);
       color: var(--text);
       min-height: 100vh;
-    }
-    .container {
-      display: flex;
-      min-height: 100vh;
+      overflow-x: hidden;
     }
     .sidebar {
-      width: 320px;
+      position: fixed;
+      top: 50%;
+      left: 3vw;
+      transform: translateY(-50%);
+      width: 300px;
       background: linear-gradient(135deg, var(--primary), var(--secondary));
       color: #fff;
+      border-radius: 1.5rem;
+      box-shadow: var(--shadow);
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 2rem 1rem 1rem 1rem;
-      box-shadow: var(--shadow);
-      z-index: 2;
+      padding: 2rem 1rem 1.5rem 1rem;
+      z-index: 10;
     }
     .profile-img {
-      width: 120px;
-      height: 120px;
+      width: 110px;
+      height: 110px;
       border-radius: 50%;
       object-fit: cover;
       border: 4px solid var(--accent);
@@ -99,21 +101,25 @@
     .socials a:hover {
       color: var(--accent);
     }
-    .main-content {
-      flex: 1;
+    .main-content-wrapper {
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: var(--bg);
-      padding: 2rem;
-      min-height: 100vh;
+      margin-left: 340px; /* sidebar width + margin */
+      transition: margin 0.3s;
+    }
+    .main-content {
       position: relative;
-      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 500px;
+      width: 700px;
+      max-width: 90vw;
     }
     .card-content {
       width: 100%;
-      max-width: 700px;
-      min-height: 350px;
       background: var(--card-bg);
       border-radius: 1.2rem;
       box-shadow: var(--shadow);
@@ -122,16 +128,20 @@
       left: 0;
       top: 0;
       opacity: 0;
-      transform: rotateY(90deg);
+      transform: perspective(800px) rotateY(90deg);
       transition: 
         opacity 0.5s cubic-bezier(.77,0,.18,1),
         transform 0.7s cubic-bezier(.77,0,.18,1);
       z-index: 1;
       pointer-events: none;
+      min-height: 350px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
     .card-content.active {
       opacity: 1;
-      transform: rotateY(0deg);
+      transform: perspective(800px) rotateY(0deg);
       pointer-events: auto;
       z-index: 2;
     }
@@ -140,17 +150,31 @@
       margin-top: 0;
       font-size: 2rem;
     }
-    @media (max-width: 900px) {
-      .container {
-        flex-direction: column;
+    @media (max-width: 1100px) {
+      .main-content {
+        width: 95vw;
+        min-width: 0;
+      }
+      .main-content-wrapper {
+        margin-left: 0;
       }
       .sidebar {
-        width: 100%;
+        left: 0.5vw;
+      }
+    }
+    @media (max-width: 900px) {
+      .sidebar {
+        position: static;
+        width: 100vw;
+        border-radius: 0 0 1.5rem 1.5rem;
         flex-direction: row;
         justify-content: flex-start;
         align-items: flex-start;
         padding: 1rem;
         box-shadow: none;
+        top: 0;
+        left: 0;
+        transform: none;
       }
       .profile-img {
         width: 70px;
@@ -175,8 +199,13 @@
         margin-top: 0.5rem;
         gap: 0.7rem;
       }
+      .main-content-wrapper {
+        margin-left: 0;
+        padding-top: 120px;
+      }
       .main-content {
-        padding: 1rem;
+        width: 100vw;
+        min-width: 0;
       }
       .card-content {
         padding: 1.2rem 0.7rem;
@@ -184,6 +213,9 @@
       }
     }
     @media (max-width: 600px) {
+      .main-content-wrapper {
+        padding-top: 80px;
+      }
       .main-content {
         padding: 0.2rem;
       }
@@ -194,25 +226,25 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <aside class="sidebar">
-      <img src="https://avatars.githubusercontent.com/u/your-github-id" alt="Atul Jakhar" class="profile-img">
-      <div>
-        <h1>Atul Jakhar</h1>
-        <p>Assistant Professor<br>Data Science | Researcher</p>
-      </div>
-      <nav class="nav-sections">
-        <button class="active" data-section="about">About</button>
-        <button data-section="research">Research</button>
-        <button data-section="teaching">Teaching</button>
-        <button data-section="contact">Contact</button>
-      </nav>
-      <div class="socials">
-        <a href="https://github.com/atuljakhar" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/atuljakhar" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-        <a href="mailto:atul.jakhar@dsu.edu.in" title="Email"><i class="fas fa-envelope"></i></a>
-      </div>
-    </aside>
+  <aside class="sidebar">
+    <img src="https://avatars.githubusercontent.com/u/your-github-id" alt="Atul Jakhar" class="profile-img">
+    <div>
+      <h1>Atul Jakhar</h1>
+      <p>Assistant Professor<br>Data Science | Researcher</p>
+    </div>
+    <nav class="nav-sections">
+      <button class="active" data-section="about">About</button>
+      <button data-section="research">Research</button>
+      <button data-section="teaching">Teaching</button>
+      <button data-section="contact">Contact</button>
+    </nav>
+    <div class="socials">
+      <a href="https://github.com/atuljakhar" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/atuljakhar" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a href="mailto:atul.jakhar@dsu.edu.in" title="Email"><i class="fas fa-envelope"></i></a>
+    </div>
+  </aside>
+  <div class="main-content-wrapper">
     <main class="main-content">
       <section class="card-content active" id="about">
         <h2>About Me</h2>
