--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       align-items: center;
       padding: 2rem 1rem 1.5rem 1rem;
       z-index: 10;
+      transition: all 0.3s;
     }
     .profile-img {
       width: 110px;
@@ -150,6 +151,7 @@
       margin-top: 0;
       font-size: 2rem;
     }
+    /* Tablet */
     @media (max-width: 1100px) {
       .main-content {
         width: 95vw;
@@ -162,65 +164,93 @@
         left: 0.5vw;
       }
     }
-    @media (max-width: 900px) {
+    /* Mobile */
+    @media (max-width: 800px) {
       .sidebar {
-        position: static;
+        position: fixed;
+        top: 0;
+        left: 0;
         width: 100vw;
         border-radius: 0 0 1.5rem 1.5rem;
         flex-direction: row;
         justify-content: flex-start;
-        align-items: flex-start;
-        padding: 1rem;
-        box-shadow: none;
-        top: 0;
-        left: 0;
+        align-items: center;
+        padding: 1rem 0.5rem 1rem 0.5rem;
+        box-shadow: var(--shadow);
         transform: none;
+        z-index: 100;
       }
       .profile-img {
-        width: 70px;
-        height: 70px;
+        width: 60px;
+        height: 60px;
         margin-bottom: 0;
         margin-right: 1rem;
       }
-      .sidebar h1, .sidebar p {
-        font-size: 1rem;
+      .sidebar h1 {
+        font-size: 1.1rem;
+        margin: 0 0.5rem 0 0;
+      }
+      .sidebar p {
+        font-size: 0.9rem;
         margin: 0 0.5rem 0 0;
       }
       .nav-sections {
         flex-direction: row;
         gap: 0.3rem;
         margin-top: 0;
+        margin-left: 1rem;
       }
       .nav-sections button {
         font-size: 0.95rem;
         padding: 0.5rem 0.7rem;
       }
       .socials {
-        margin-top: 0.5rem;
+        margin-top: 0;
+        margin-left: auto;
         gap: 0.7rem;
       }
       .main-content-wrapper {
         margin-left: 0;
         padding-top: 120px;
+        min-height: calc(100vh - 120px);
+        align-items: flex-start;
       }
       .main-content {
         width: 100vw;
         min-width: 0;
+        min-height: 0;
+        padding: 0;
+        justify-content: center;
       }
       .card-content {
-        padding: 1.2rem 0.7rem;
+        position: static;
         min-height: 200px;
+        padding: 1.2rem 0.7rem;
+        margin: 0 auto;
+        width: 98vw;
+        max-width: 98vw;
+        box-sizing: border-box;
       }
     }
-    @media (max-width: 600px) {
-      .main-content-wrapper {
-        padding-top: 80px;
+    @media (max-width: 500px) {
+      .sidebar {
+        padding: 0.5rem 0.2rem 0.5rem 0.2rem;
       }
-      .main-content {
-        padding: 0.2rem;
+      .main-content-wrapper {
+        padding-top: 90px;
+        min-height: calc(100vh - 90px);
+      }
+      .profile-img {
+        width: 40px;
+        height: 40px;
+        margin-right: 0.5rem;
       }
       .card-content {
         padding: 0.7rem 0.2rem;
+        font-size: 0.98rem;
+      }
+      .card-content h2 {
+        font-size: 1.2rem;
       }
     }
   </style>
@@ -294,6 +324,12 @@
             card.classList.remove('active');
           }
         });
+        // Scroll to content on mobile
+        if (window.innerWidth < 800) {
+          setTimeout(() => {
+            document.querySelector('.main-content-wrapper').scrollIntoView({behavior: 'smooth'});
+          }, 200);
+        }
       });
     });
   </script>
