--- a/index.html
+++ b/index.html
@@ -3,335 +3,198 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Atul Jakhar - Card Style Website</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <title>Neuron Network Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    :root {
-      --primary: #ff4e50;
-      --secondary: #1e90ff;
-      --accent: #f9d423;
-      --bg: #f5f6fa;
-      --text: #222;
-      --card-bg: #fff;
-      --shadow: 0 8px 32px rgba(0,0,0,0.15);
-    }
-    body {
+    html, body {
+      height: 100%;
       margin: 0;
-      font-family: 'Montserrat', Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      min-height: 100vh;
-      overflow-x: hidden;
+      padding: 0;
+      background: #181c24;
+      overflow: hidden;
+      font-family: 'Segoe UI', Arial, sans-serif;
     }
-    .sidebar {
+    #neuron-svg {
+      width: 100vw;
+      height: 100vh;
+      display: block;
+      background: radial-gradient(ellipse at center, #23283a 0%, #181c24 100%);
+    }
+    .neuron-dot {
+      cursor: pointer;
+      transition: filter 0.2s;
+      filter: drop-shadow(0 0 8px #00ffe7);
+    }
+    .neuron-dot:hover {
+      filter: drop-shadow(0 0 16px #00ffe7) brightness(1.2);
+    }
+    /* Popup styles */
+    #popup {
       position: fixed;
       top: 50%;
-      left: 3vw;
-      transform: translateY(-50%);
-      width: 300px;
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
+      left: 50%;
+      transform: translate(-50%, -50%) scale(1);
+      background: rgba(30, 34, 44, 0.98);
+      border-radius: 18px;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.4);
+      padding: 32px 40px;
+      z-index: 1000;
+      display: none;
+      min-width: 260px;
+      min-height: 180px;
       color: #fff;
-      border-radius: 1.5rem;
-      box-shadow: var(--shadow);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem 1rem 1.5rem 1rem;
-      z-index: 10;
-      transition: all 0.3s;
+      animation: popupIn 0.25s;
     }
-    .profile-img {
-      width: 110px;
-      height: 110px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid var(--accent);
-      margin-bottom: 1rem;
-      box-shadow: var(--shadow);
+    @keyframes popupIn {
+      from { transform: translate(-50%, -50%) scale(0.8); opacity: 0; }
+      to { transform: translate(-50%, -50%) scale(1); opacity: 1; }
     }
-    .sidebar h1 {
-      margin: 0 0 0.5rem 0;
-      font-size: 2rem;
+    #popup h2 {
+      margin-top: 0;
+      font-size: 1.4em;
       letter-spacing: 1px;
+      color: #00ffe7;
     }
-    .sidebar p {
-      margin: 0 0 1.5rem 0;
-      font-size: 1.1rem;
-      font-weight: 400;
-      text-align: center;
+    #popup ul {
+      list-style: none;
+      padding: 0;
+      margin: 18px 0 0 0;
     }
-    .nav-sections {
-      width: 100%;
-      margin-top: 1rem;
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-    }
-    .nav-sections button {
-      background: rgba(255,255,255,0.15);
-      border: none;
-      color: #fff;
-      font-size: 1.1rem;
-      font-weight: 700;
-      padding: 0.8rem 1rem;
-      border-radius: 0.7rem;
-      cursor: pointer;
-      text-align: left;
-      transition: background 0.2s, color 0.2s;
-      outline: none;
+    #popup ul li {
+      margin: 12px 0;
+      font-size: 1.1em;
+      padding-left: 0.5em;
       position: relative;
     }
-    .nav-sections button.active,
-    .nav-sections button:hover {
-      background: var(--accent);
-      color: var(--primary);
+    #popup ul li:before {
+      content: '';
+      display: inline-block;
+      width: 8px;
+      height: 8px;
+      background: #00ffe7;
+      border-radius: 50%;
+      margin-right: 12px;
+      vertical-align: middle;
+      box-shadow: 0 0 8px #00ffe7;
     }
-    .socials {
-      margin-top: 2rem;
-      display: flex;
-      gap: 1.2rem;
-      justify-content: center;
-    }
-    .socials a {
-      color: #fff;
-      font-size: 1.5rem;
+    #popup .close-btn {
+      position: absolute;
+      top: 12px;
+      right: 18px;
+      background: none;
+      border: none;
+      color: #00ffe7;
+      font-size: 1.5em;
+      cursor: pointer;
       transition: color 0.2s;
     }
-    .socials a:hover {
-      color: var(--accent);
+    #popup .close-btn:hover {
+      color: #ff3c6f;
     }
-    .main-content-wrapper {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-left: 340px; /* sidebar width + margin */
-      transition: margin 0.3s;
-    }
-    .main-content {
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 500px;
-      width: 700px;
-      max-width: 90vw;
-    }
-    .card-content {
-      width: 100%;
-      background: var(--card-bg);
-      border-radius: 1.2rem;
-      box-shadow: var(--shadow);
-      padding: 2.5rem 2rem;
-      position: absolute;
-      left: 0;
-      top: 0;
-      opacity: 0;
-      transform: perspective(800px) rotateY(90deg);
-      transition: 
-        opacity 0.5s cubic-bezier(.77,0,.18,1),
-        transform 0.7s cubic-bezier(.77,0,.18,1);
-      z-index: 1;
-      pointer-events: none;
-      min-height: 350px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-    .card-content.active {
-      opacity: 1;
-      transform: perspective(800px) rotateY(0deg);
-      pointer-events: auto;
-      z-index: 2;
-    }
-    .card-content h2 {
-      color: var(--primary);
-      margin-top: 0;
-      font-size: 2rem;
-    }
-    /* Tablet */
-    @media (max-width: 1100px) {
-      .main-content {
-        width: 95vw;
-        min-width: 0;
-      }
-      .main-content-wrapper {
-        margin-left: 0;
-      }
-      .sidebar {
-        left: 0.5vw;
-      }
-    }
-    /* Mobile */
-    @media (max-width: 800px) {
-      .sidebar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        border-radius: 0 0 1.5rem 1.5rem;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
-        padding: 1rem 0.5rem 1rem 0.5rem;
-        box-shadow: var(--shadow);
-        transform: none;
-        z-index: 100;
-      }
-      .profile-img {
-        width: 60px;
-        height: 60px;
-        margin-bottom: 0;
-        margin-right: 1rem;
-      }
-      .sidebar h1 {
-        font-size: 1.1rem;
-        margin: 0 0.5rem 0 0;
-      }
-      .sidebar p {
-        font-size: 0.9rem;
-        margin: 0 0.5rem 0 0;
-      }
-      .nav-sections {
-        flex-direction: row;
-        gap: 0.3rem;
-        margin-top: 0;
-        margin-left: 1rem;
-      }
-      .nav-sections button {
-        font-size: 0.95rem;
-        padding: 0.5rem 0.7rem;
-      }
-      .socials {
-        margin-top: 0;
-        margin-left: auto;
-        gap: 0.7rem;
-      }
-      .main-content-wrapper {
-        margin-left: 0;
-        padding-top: 120px;
-        min-height: calc(100vh - 120px);
-        align-items: flex-start;
-      }
-      .main-content {
-        width: 100vw;
-        min-width: 0;
-        min-height: 0;
-        padding: 0;
-        justify-content: center;
-      }
-      .card-content {
-        position: static;
-        min-height: 200px;
-        padding: 1.2rem 0.7rem;
-        margin: 0 auto;
-        width: 98vw;
-        max-width: 98vw;
-        box-sizing: border-box;
-      }
-    }
-    @media (max-width: 500px) {
-      .sidebar {
-        padding: 0.5rem 0.2rem 0.5rem 0.2rem;
-      }
-      .main-content-wrapper {
-        padding-top: 90px;
-        min-height: calc(100vh - 90px);
-      }
-      .profile-img {
-        width: 40px;
-        height: 40px;
-        margin-right: 0.5rem;
-      }
-      .card-content {
-        padding: 0.7rem 0.2rem;
-        font-size: 0.98rem;
-      }
-      .card-content h2 {
-        font-size: 1.2rem;
+    @media (max-width: 600px) {
+      #popup {
+        padding: 18px 10px;
+        min-width: 160px;
       }
     }
   </style>
 </head>
 <body>
-  <aside class="sidebar">
-    <img src="https://avatars.githubusercontent.com/u/your-github-id" alt="Atul Jakhar" class="profile-img">
-    <div>
-      <h1>Atul Jakhar</h1>
-      <p>Assistant Professor<br>Data Science | Researcher</p>
-    </div>
-    <nav class="nav-sections">
-      <button class="active" data-section="about">About</button>
-      <button data-section="research">Research</button>
-      <button data-section="teaching">Teaching</button>
-      <button data-section="contact">Contact</button>
-    </nav>
-    <div class="socials">
-      <a href="https://github.com/atuljakhar" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/atuljakhar" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-      <a href="mailto:atul.jakhar@dsu.edu.in" title="Email"><i class="fas fa-envelope"></i></a>
-    </div>
-  </aside>
-  <div class="main-content-wrapper">
-    <main class="main-content">
-      <section class="card-content active" id="about">
-        <h2>About Me</h2>
-        <p>
-          I am an Assistant Professor at Dayananda Sagar University, Bengaluru, specializing in Data Science, Machine Learning, and Artificial Intelligence. My research interests include deep learning, computer vision, and natural language processing. I am passionate about teaching, mentoring, and contributing to the academic community.
-        </p>
-      </section>
-      <section class="card-content" id="research">
-        <h2>Research</h2>
-        <ul>
-          <li><strong>Deep Learning for Medical Imaging</strong> – Published in IEEE Xplore, 2023</li>
-          <li><strong>Natural Language Processing for Indian Languages</strong> – Springer, 2022</li>
-          <li><strong>AI in Education</strong> – Ongoing project</li>
-        </ul>
-      </section>
-      <section class="card-content" id="teaching">
-        <h2>Teaching</h2>
-        <ul>
-          <li>Data Science & Machine Learning (B.Tech, M.Tech)</li>
-          <li>Python Programming</li>
-          <li>Artificial Intelligence</li>
-          <li>Mentor for student research projects</li>
-        </ul>
-      </section>
-      <section class="card-content" id="contact">
-        <h2>Contact</h2>
-        <p>
-          <strong>Email:</strong> <a href="mailto:atul.jakhar@dsu.edu.in">atul.jakhar@dsu.edu.in</a><br>
-          <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/atuljakhar" target="_blank">atuljakhar</a><br>
-          <strong>GitHub:</strong> <a href="https://github.com/atuljakhar" target="_blank">atuljakhar</a>
-        </p>
-      </section>
-    </main>
+  <svg id="neuron-svg"></svg>
+  <div id="popup">
+    <button class="close-btn" onclick="closePopup()" aria-label="Close">&times;</button>
+    <h2>Neuron Sections</h2>
+    <ul>
+      <li>About Me</li>
+      <li>Education</li>
+      <li>Research</li>
+      <li>Teaching</li>
+    </ul>
   </div>
   <script>
-    // Card navigation logic
-    const navButtons = document.querySelectorAll('.nav-sections button');
-    const cards = document.querySelectorAll('.card-content');
-    navButtons.forEach(btn => {
-      btn.addEventListener('click', () => {
-        navButtons.forEach(b => b.classList.remove('active'));
-        btn.classList.add('active');
-        cards.forEach(card => {
-          if (card.id === btn.dataset.section) {
-            card.classList.add('active');
-          } else {
-            card.classList.remove('active');
-          }
-        });
-        // Scroll to content on mobile
-        if (window.innerWidth < 800) {
-          setTimeout(() => {
-            document.querySelector('.main-content-wrapper').scrollIntoView({behavior: 'smooth'});
-          }, 200);
-        }
+    // Neuron network data (positions and connections)
+    const neurons = [
+      { id: 1, x: 300, y: 200 },
+      { id: 2, x: 500, y: 150 },
+      { id: 3, x: 700, y: 250 },
+      { id: 4, x: 400, y: 400 },
+      { id: 5, x: 600, y: 420 },
+      { id: 6, x: 800, y: 350 },
+      { id: 7, x: 200, y: 350 },
+      { id: 8, x: 900, y: 200 }
+    ];
+    const connections = [
+      [1,2],[2,3],[1,4],[2,4],[3,5],[4,5],[5,6],[3,6],[1,7],[7,4],[3,8],[6,8]
+    ];
+
+    function resizeSVG() {
+      const svg = document.getElementById('neuron-svg');
+      svg.setAttribute('width', window.innerWidth);
+      svg.setAttribute('height', window.innerHeight);
+    }
+
+    function drawNetwork() {
+      const svg = document.getElementById('neuron-svg');
+      svg.innerHTML = '';
+      resizeSVG();
+
+      // Draw connections
+      connections.forEach(([from, to]) => {
+        const n1 = neurons.find(n => n.id === from);
+        const n2 = neurons.find(n => n.id === to);
+        const line = document.createElementNS('http://www.w3.org/2000/svg','line');
+        line.setAttribute('x1', n1.x);
+        line.setAttribute('y1', n1.y);
+        line.setAttribute('x2', n2.x);
+        line.setAttribute('y2', n2.y);
+        line.setAttribute('stroke', '#00ffe7');
+        line.setAttribute('stroke-width', '2.5');
+        line.setAttribute('opacity', '0.25');
+        line.setAttribute('filter', 'url(#glow)');
+        svg.appendChild(line);
       });
-    });
-  </script>
-</body>
-</html>
+
+      // SVG filter for glow
+      const defs = document.createElementNS('http://www.w3.org/2000/svg','defs');
+      defs.innerHTML = `
+        <filter id="glow" x="-50%" y="-50%" width="200%" height="200%">
+          <feGaussianBlur stdDeviation="4" result="coloredBlur"/>
+          <feMerge>
+            <feMergeNode in="coloredBlur"/>
+            <feMergeNode in="SourceGraphic"/>
+          </feMerge>
+        </filter>
+      `;
+      svg.appendChild(defs);
+
+      // Draw neurons
+      neurons.forEach(n => {
+        const circle = document.createElementNS('http://www.w3.org/2000/svg','circle');
+        circle.setAttribute('cx', n.x);
+        circle.setAttribute('cy', n.y);
+        circle.setAttribute('r', 22);
+        circle.setAttribute('fill', '#23283a');
+        circle.setAttribute('stroke', '#00ffe7');
+        circle.setAttribute('stroke-width', '3');
+        circle.setAttribute('class', 'neuron-dot');
+        circle.setAttribute('filter', 'url(#glow)');
+        circle.addEventListener('click', (e) => {
+          e.stopPropagation();
+          openPopup();
+        });
+        svg.appendChild(circle);
+
+        // Inner dot
+        const inner = document.createElementNS('http://www.w3.org/2000/svg','circle');
+        inner.setAttribute('cx', n.x);
+        inner.setAttribute('cy', n.y);
+        inner.setAttribute('r', 8);
+        inner.setAttribute('fill', '#00ffe7');
+        inner.setAttribute('opacity', '0.85');
+        inner.setAttribute('pointer-events', 'none');
+        svg.appendChild(inner);
+      });
+    }
+
+    function openPopup() {
+     
