--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,59 +13,44 @@
       overflow: hidden;
       font-family: 'Segoe UI', Arial, sans-serif;
     }
-    #neuron-svg {
+    #neuron-canvas {
+      display: block;
       width: 100vw;
       height: 100vh;
-      display: block;
       background: radial-gradient(ellipse at center, #23283a 0%, #181c24 100%);
     }
-    .neuron-dot {
-      cursor: pointer;
-      transition: filter 0.2s;
-      filter: drop-shadow(0 0 8px #00ffe7);
-    }
-    .neuron-dot:hover {
-      filter: drop-shadow(0 0 16px #00ffe7) brightness(1.2);
-    }
-    /* Popup styles */
-    #popup {
+    .popup {
       position: fixed;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%) scale(1);
+      transform: translate(-50%, -50%);
       background: rgba(30, 34, 44, 0.98);
       border-radius: 18px;
       box-shadow: 0 8px 32px rgba(0,0,0,0.4);
       padding: 32px 40px;
       z-index: 1000;
-      display: none;
       min-width: 260px;
       min-height: 180px;
       color: #fff;
-      animation: popupIn 0.25s;
+      display: none;
     }
-    @keyframes popupIn {
-      from { transform: translate(-50%, -50%) scale(0.8); opacity: 0; }
-      to { transform: translate(-50%, -50%) scale(1); opacity: 1; }
-    }
-    #popup h2 {
+    .popup h2 {
       margin-top: 0;
       font-size: 1.4em;
-      letter-spacing: 1px;
       color: #00ffe7;
     }
-    #popup ul {
+    .popup ul {
       list-style: none;
       padding: 0;
       margin: 18px 0 0 0;
     }
-    #popup ul li {
+    .popup ul li {
       margin: 12px 0;
       font-size: 1.1em;
       padding-left: 0.5em;
       position: relative;
     }
-    #popup ul li:before {
+    .popup ul li:before {
       content: '';
       display: inline-block;
       width: 8px;
@@ -77,7 +61,7 @@
       vertical-align: middle;
       box-shadow: 0 0 8px #00ffe7;
     }
-    #popup .close-btn {
+    .close-btn {
       position: absolute;
       top: 12px;
       right: 18px;
@@ -86,13 +70,12 @@
       color: #00ffe7;
       font-size: 1.5em;
       cursor: pointer;
-      transition: color 0.2s;
     }
-    #popup .close-btn:hover {
+    .close-btn:hover {
       color: #ff3c6f;
     }
     @media (max-width: 600px) {
-      #popup {
+      .popup {
         padding: 18px 10px;
         min-width: 160px;
       }
@@ -100,8 +83,8 @@
   </style>
 </head>
 <body>
-  <svg id="neuron-svg"></svg>
-  <div id="popup">
+  <canvas id="neuron-canvas"></canvas>
+  <div class="popup" id="popup">
     <button class="close-btn" onclick="closePopup()" aria-label="Close">&times;</button>
     <h2>Neuron Sections</h2>
     <ul>
@@ -112,89 +95,111 @@
     </ul>
   </div>
   <script>
-    // Neuron network data (positions and connections)
+    // Neuron data
     const neurons = [
-      { id: 1, x: 300, y: 200 },
-      { id: 2, x: 500, y: 150 },
-      { id: 3, x: 700, y: 250 },
-      { id: 4, x: 400, y: 400 },
-      { id: 5, x: 600, y: 420 },
-      { id: 6, x: 800, y: 350 },
-      { id: 7, x: 200, y: 350 },
-      { id: 8, x: 900, y: 200 }
+      { x: 0.3, y: 0.3 },
+      { x: 0.5, y: 0.2 },
+      { x: 0.7, y: 0.35 },
+      { x: 0.4, y: 0.6 },
+      { x: 0.6, y: 0.65 },
+      { x: 0.8, y: 0.5 },
+      { x: 0.2, y: 0.6 },
+      { x: 0.9, y: 0.3 }
     ];
     const connections = [
-      [1,2],[2,3],[1,4],[2,4],[3,5],[4,5],[5,6],[3,6],[1,7],[7,4],[3,8],[6,8]
+      [0,1],[1,2],[0,3],[1,3],[2,4],[3,4],[4,5],[2,5],[0,6],[6,3],[2,7],[5,7]
     ];
+    let canvas, ctx, width, height, neuronRadius = 22;
 
-    function resizeSVG() {
-      const svg = document.getElementById('neuron-svg');
-      svg.setAttribute('width', window.innerWidth);
-      svg.setAttribute('height', window.innerHeight);
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+      width = canvas.width;
+      height = canvas.height;
     }
 
     function drawNetwork() {
-      const svg = document.getElementById('neuron-svg');
-      svg.innerHTML = '';
-      resizeSVG();
-
+      ctx.clearRect(0, 0, width, height);
       // Draw connections
-      connections.forEach(([from, to]) => {
-        const n1 = neurons.find(n => n.id === from);
-        const n2 = neurons.find(n => n.id === to);
-        const line = document.createElementNS('http://www.w3.org/2000/svg','line');
-        line.setAttribute('x1', n1.x);
-        line.setAttribute('y1', n1.y);
-        line.setAttribute('x2', n2.x);
-        line.setAttribute('y2', n2.y);
-        line.setAttribute('stroke', '#00ffe7');
-        line.setAttribute('stroke-width', '2.5');
-        line.setAttribute('opacity', '0.25');
-        line.setAttribute('filter', 'url(#glow)');
-        svg.appendChild(line);
+      ctx.save();
+      ctx.strokeStyle = "#00ffe7";
+      ctx.globalAlpha = 0.25;
+      ctx.lineWidth = 2.5;
+      connections.forEach(([a, b]) => {
+        const n1 = neurons[a], n2 = neurons[b];
+        ctx.beginPath();
+        ctx.moveTo(n1.x * width, n1.y * height);
+        ctx.lineTo(n2.x * width, n2.y * height);
+        ctx.stroke();
       });
-
-      // SVG filter for glow
-      const defs = document.createElementNS('http://www.w3.org/2000/svg','defs');
-      defs.innerHTML = `
-        <filter id="glow" x="-50%" y="-50%" width="200%" height="200%">
-          <feGaussianBlur stdDeviation="4" result="coloredBlur"/>
-          <feMerge>
-            <feMergeNode in="coloredBlur"/>
-            <feMergeNode in="SourceGraphic"/>
-          </feMerge>
-        </filter>
-      `;
-      svg.appendChild(defs);
-
+      ctx.restore();
       // Draw neurons
       neurons.forEach(n => {
-        const circle = document.createElementNS('http://www.w3.org/2000/svg','circle');
-        circle.setAttribute('cx', n.x);
-        circle.setAttribute('cy', n.y);
-        circle.setAttribute('r', 22);
-        circle.setAttribute('fill', '#23283a');
-        circle.setAttribute('stroke', '#00ffe7');
-        circle.setAttribute('stroke-width', '3');
-        circle.setAttribute('class', 'neuron-dot');
-        circle.setAttribute('filter', 'url(#glow)');
-        circle.addEventListener('click', (e) => {
-          e.stopPropagation();
-          openPopup();
-        });
-        svg.appendChild(circle);
-
+        // Outer glow
+        ctx.save();
+        ctx.shadowColor = "#00ffe7";
+        ctx.shadowBlur = 16;
+        ctx.beginPath();
+        ctx.arc(n.x * width, n.y * height, neuronRadius, 0, 2 * Math.PI);
+        ctx.fillStyle = "#23283a";
+        ctx.fill();
+        ctx.restore();
+        // Border
+        ctx.beginPath();
+        ctx.arc(n.x * width, n.y * height, neuronRadius, 0, 2 * Math.PI);
+        ctx.strokeStyle = "#00ffe7";
+        ctx.lineWidth = 3;
+        ctx.stroke();
         // Inner dot
-        const inner = document.createElementNS('http://www.w3.org/2000/svg','circle');
-        inner.setAttribute('cx', n.x);
-        inner.setAttribute('cy', n.y);
-        inner.setAttribute('r', 8);
-        inner.setAttribute('fill', '#00ffe7');
-        inner.setAttribute('opacity', '0.85');
-        inner.setAttribute('pointer-events', 'none');
-        svg.appendChild(inner);
+        ctx.beginPath();
+        ctx.arc(n.x * width, n.y * height, 8, 0, 2 * Math.PI);
+        ctx.fillStyle = "#00ffe7";
+        ctx.globalAlpha = 0.85;
+        ctx.fill();
+        ctx.globalAlpha = 1.0;
       });
     }
 
+    function getNeuronAt(x, y) {
+      for (let i = 0; i < neurons.length; i++) {
+        const n = neurons[i];
+        const dx = x - n.x * width;
+        const dy = y - n.y * height;
+        if (dx*dx + dy*dy < neuronRadius*neuronRadius) return i;
+      }
+      return -1;
+    }
+
     function openPopup() {
-     
+      document.getElementById('popup').style.display = 'block';
+    }
+    function closePopup() {
+      document.getElementById('popup').style.display = 'none';
+    }
+
+    // Event listeners
+    window.addEventListener('resize', () => {
+      resizeCanvas();
+      drawNetwork();
+    });
+
+    window.addEventListener('DOMContentLoaded', () => {
+      canvas = document.getElementById('neuron-canvas');
+      ctx = canvas.getContext('2d');
+      resizeCanvas();
+      drawNetwork();
+      canvas.addEventListener('click', function(e) {
+        const rect = canvas.getBoundingClientRect();
+        const x = e.clientX - rect.left;
+        const y = e.clientY - rect.top;
+        if (getNeuronAt(x, y) !== -1) openPopup();
+      });
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closePopup();
+    });
+    window.closePopup = closePopup;
+  </script>
+</body>
+</html>
